--- a/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj
+++ b/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj
@@ -24,6 +24,7 @@
     <ClCompile Include="DrawManager.cpp" />
     <ClCompile Include="Engine.cpp" />
     <ClCompile Include="GameState.cpp" />
+    <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Invader.cpp" />
     <ClCompile Include="IState.cpp" />
     <ClCompile Include="Keyboard.cpp" />
