--- a/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj.filters
+++ b/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj.filters
@@ -72,6 +72,9 @@
     <ClCompile Include="InputManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Shot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -132,6 +135,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Menu.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Shot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
