--- a/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj
+++ b/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj
@@ -23,6 +23,7 @@
     <ClCompile Include="CollisionManager.cpp" />
     <ClCompile Include="DrawManager.cpp" />
     <ClCompile Include="Engine.cpp" />
+    <ClCompile Include="GameOverState.cpp" />
     <ClCompile Include="GameState.cpp" />
     <ClCompile Include="InputManager.cpp" />
     <ClCompile Include="Invader.cpp" />
@@ -39,12 +40,14 @@
     <ClCompile Include="StateManager.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="Utility.cpp" />
+    <ClCompile Include="WinState.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Collider.h" />
     <ClInclude Include="CollisionManager.h" />
     <ClInclude Include="DrawManager.h" />
     <ClInclude Include="Engine.h" />
+    <ClInclude Include="GameOverState.h" />
     <ClInclude Include="GameState.h" />
     <ClInclude Include="IEntity.h" />
     <ClInclude Include="InputManager.h" />
@@ -62,6 +65,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Utility.h" />
+    <ClInclude Include="WinState.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E482F204-09AC-4C35-B9C5-D03124BFBF49}</ProjectGuid>
