--- a/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj.filters
+++ b/SDL_SpaceInvaders/SDL_SpaceInvaders.vcxproj.filters
@@ -84,6 +84,9 @@
     <ClCompile Include="Defence.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EnemyShot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -156,6 +159,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Defence.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyShot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
